--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -49,6 +49,8 @@
 }
 
 .todo {
+	position:relative;
+	z-index: 1;
 	display: flex;
 	align-items: center;
 
@@ -60,6 +62,8 @@
 
 	background: linear-gradient(95.92deg, #2C8DA6 0%, #1c505e 100%);
 	border-bottom: 1px solid #313131;
+
+	box-shadow: 4px 0 10px -2px rgba(0, 0, 0, 0.397);
 	
 
 	height: 50px;
