--- a/src/index.css
+++ b/src/index.css
@@ -56,5 +56,7 @@ body {
 
     font-family: 'ABeeZee', serif;
 
-    background: linear-gradient(180deg, #35426A 0%, #141928 100%);
+	background: linear-gradient(180deg, #35426A 0%, #141928 100%);
+	
+	overflow: hidden;
 }
